<?xml version="1.0" encoding="utf-8"?>
<!--
-->

<layout>
    <data>
        <variable name="settings"
            type="net.oldev.aDictOnCopy.MainActivity.SettingsUIModel" />
        <variable name="handler"
            type="net.oldev.aDictOnCopy.MainActivity" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="net.oldev.aDictOnCopy.MainActivity">

        <Button
            android:id="@+id/startCtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_service_label"
            android:enabled="@{!settings.inError}"
            android:onClick="@{() -> handler.startServiceAndFinish()}"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_spacer_height"
            tools:ignore="UselessLeaf"/> <!-- Used as <Space> for API level < 14 -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_intro_label"
                style="@style/BodyFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_spacer_height"
            tools:ignore="UselessLeaf"/> <!-- Used as <Space> for API level < 14 -->

        <LinearLayout
            android:id="@+id/dictSelectCtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="@{() -> handler.promptUserToChooseDictionary()}">

            <TextView
                android:text="@string/selected_dict_label"
                style="@style/SectionFont"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="@dimen/item_spacer_width"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf"/>
            <TextView
                android:id="@+id/dictSelectOutput"
                style="@style/BodyFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@{settings.packageDisplayName}" />
        </LinearLayout>

        <TextView
            android:id="@+id/dictSelectErrOutput"
            style="@style/ErrorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{handler.modelErrorCodeToMessage(settings)}' />

    </LinearLayout>

</layout>
